frontend/src/patient/pages/cart/CartPage.module.css
.cartpage {
    background-image: url('./backgroundImage.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    width: 100vw;
    height: 100vh;
  }
  .backgroundsvg{
    position:absolute;
    left:20%;
    overflow-x: hidden;
  }
  .cartItem{
    height: 490px;
    overflow-y: scroll;
    width: 500px;
  }
 /* background-size: cover;  Scale the image to cover the entire container */

  /* You may need to adjust the following styles depending on your design */
  .pageContent {
    
    display: flex;
    justify-content: flex-end; /* Align content to the right */
    height: 100%; /* Fill the entire height of the viewport */
    position: relative;
    right: 270px;
  }
  .summary {
    text-align: right;
  } 
  .items{
    color: gray;
    text-align: left;
    position: relative;
    left: 30px;
    font-family: 'manrope', sans-serif;
  }
  .price{
    text-align:center ;
    position: relative;
    left: 240px;
    top: -57px;
    font-weight: bold;
    color: black;

  }
  .label{
    color: black;
    font-family: 'poppins', sans-serif;
    font-weight: normal;
  }
  .empty{
    color: gray;
    font-family: 'poppins', sans-serif;
    text-align: center;
    position: relative;
    left: -250px;
    font-weight: bold;

  }
  h1{
   
    text-align: center;
    position: relative;
    left: 180px;
    font-family: 'Poppins', sans-serif;
    
  }
 .icon{
    text-align: center;
    position: relative;
    left: 450px;
    top: -55px;
  }

  .inc{
    background-color: #193842;
    color: white;
  }
  .check{
    background-color: #193842;
    color: white;
    padding: 10px 20px; /* Adjust padding as needed */
    border: none; /* Remove the default border */
    border-radius: 10px; /* Apply border-radius to round the corners */
      
  }
  .more{
    background-color: white;
    color: black;
    border: none; /* Remove the default border */
    border-radius: 10px; /* Apply border-radius to round the corners */
    text-decoration: underline;
    font-weight: bold;
  }
  .back{
    background-color: transparent;;
    color: black;
    font-weight: bold;
    border: none; /* Remove the default border */
    border-radius: 10px; /* Apply border-radius to round the corners */
    font-family: 'manrope', sans-serif;
    position: absolute;
    left: 120px;
    font-size: 16px;
    top: 80px;
  }

  
  /* Text color on the background */
   /* Center the text within the container */
  
  /* Define styles for the content within the cart page */
  /* .cart-page .summary {
  }
  
  .cart-page .total {
  }
  
  .cart-page button.secondary {
  } */
  /* <img src={background} alt="background"/> */

